// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> renders 1`] = `
<button
  class="button__Base-sc-1caough-0 iNmgRb"
>
  Click me
</button>
`;

exports[`<Button /> shows loader 1`] = `
<button
  class="button__Base-sc-1caough-0 iNmgRb"
>
  <div
    class="loader__Base-sc-4gcszs-0 evPOEd"
  />
</button>
`;
